welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:6: error: ')' expected but '=' found.
	if ( ( a + b ) = 10 ){
                       ^makes10:12: error: illegal start of simple expression
}
^